added conferenceUrl to Meeting JSON, lots of minor cleanup refactoring